thesis: Add background on processor ecosystem

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -281,3 +281,174 @@
     edition = {5},
     isbn = {978-0-12-383872-8},
 }
+
+@InProceedings{Nemati15,
+    author = {Nemati, Hamed and Guanciale, Roberto and Dam, Mads},
+    editor = {Italiano, Giuseppe F. and Margaria-Steffen, Tiziana and Pokorný, Jaroslav and Quisquater, Jean-Jacques and Wattenhofer, Roger},
+    title = {Trustworthy Virtualization of the ARMv7 Memory Subsystem},
+    booktitle = {SOFSEM 2015: Theory and Practice of Computer Science},
+    year = {2015},
+    publisher = {Springer Berlin Heidelberg},
+    address = {Berlin, Heidelberg},
+    pages = {578-589},
+    abstract = {In order to host a general purpose operating system, hypervisors need to virtualize the CPU memory subsystem. This entails dynami- cally changing MMU resources, in particular the page tables, to allow a hosted OS to reconfigure its own memory. In this paper we present the verification of the isolation properties of a hypervisor design that uses direct paging. This virtualization approach allows to host commodity OSs without requiring either shadow data structures or specialized hardware support. Our verification targets a system consisting of a commodity CPU for embedded devices (ARMv7), a hypervisor and an untrusted guest running Linux.The verification involves three steps: (i) Formalization of an ARMv7 CPU that includes the MMU, (ii) Formalization of a system behavior that includes the hypervisor and the untrusted guest (iii) Verification of the isolation properties. Formalization and proof are done in the HOL4 theorem prover, thus allowing to re-use the existing HOL4 ARMv7 model developed in Cambridge.},
+    isbn = {978-3-662-46078-8}
+}
+
+@InProceedings{Alkassar12,
+    author = {Alkassar, Eyad and Cohen, Ernie and Kovalev, Mikhail and Paul, Wolfgang J.},
+    editor = {Joshi, Rajeev and Müller, Peter and Podelski, Andreas},
+    title = {Verification of TLB Virtualization Implemented in C},
+    booktitle = {Verified Software: Theories, Tools, Experiments},
+    year = {2012},
+    publisher = {Springer Berlin Heidelberg},
+    address = {Berlin, Heidelberg},
+    pages = {209-224},
+    abstract = {Efficient TLB virtualization is a core component of modern hypervisors. Verifying such code is challenging; the code races with TLB virtualization code in other processors, with other guest threads, and with the hardware TLBs, and implements an abstract TLB that races with other abstract TLBs and guest threads. We give a general methodology for verifying virtual device implementations, and demonstrate the verification of TLB virtualization code (using shadow page tables) in the concurrent C verifier VCC. To our knowledge, this is the first verification of any kind against a realistic model of a modern hardware MMU.},
+    isbn = {978-3-642-27705-4}
+}
+
+@inproceedings{Mukherjee16,
+    author = {Mukherjee, Rajdeep and Schrammel, Peter and Kroening, Daniel and Melham, Tom},
+    title = {Unbounded Safety Verification for Hardware Using Software Analyzers},
+    booktitle = {Proceedings of the 2016 Conference on Design, Automation \& Test in Europe},
+    series = {DATE '16},
+    year = {2016},
+    isbn = {978-3-9815370-6-2},
+    location = {Dresden, Germany},
+    pages = {1152-1155},
+    numpages = {4},
+    url = {http://dl.acm.org/citation.cfm?id=2971808.2972077},
+    acmid = {2972077},
+    publisher = {EDA Consortium},
+    address = {San Jose, CA, USA},
+}
+
+@Article{Zhang15,
+    author={J. {Zhang} and F. {Yuan} and L. {Wei} and Y. {Liu} and Q. {Xu}},
+    journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+    title={VeriTrust: Verification for Hardware Trust},
+    year={2015},
+    volume={34},
+    number={7},
+    pages={1148-1161},
+    doi={10.1109/TCAD.2015.2422836},
+    month={July},
+}
+
+@inproceedings{Berezin98,
+    author = {Berezin, Sergey and Biere, Armin and Clarke, Edmund M. and Zhu, Yunshan},
+    title = {Combining Symbolic Model Checking with Uninterpreted Functions for Out-of-Order Processor Verification},
+    booktitle = {Proceedings of the Second International Conference on Formal Methods in Computer-Aided Design},
+    series = {FMCAD '98},
+    year = {1998},
+    isbn = {3-540-65191-8},
+    pages = {369--386},
+    numpages = {18},
+    url = {http://dl.acm.org/citation.cfm?id=646185.683063},
+    acmid = {683063},
+    publisher = {Springer-Verlag},
+    address = {London, UK},
+}
+
+@ARTICLE{Trippel19,
+    author={C. {Trippel} and D. {Lustig} and M. {Martonosi}},
+    journal={IEEE Micro},
+    title={Security Verification via Automatic Hardware-Aware Exploit Synthesis: The CheckMate Approach},
+    year={2019},
+    volume={39},
+    number={3},
+    pages={84-93},
+    doi={10.1109/MM.2019.2910010},
+}
+
+@InProceedings{Reid16,
+    author={Reid, Alastair and Chen, Rick and Deligiannis, Anastasios and Gilday, David and Hoyes, David and Keen, Will and Pathirane, Ashan and Shepherd, Owen and Vrabel, Peter and Zaidi, Ali},
+    editor={Chaudhuri, Swarat and Farzan, Azadeh},
+    title={End-to-End Verification of Processors with ISA-Formal},
+    booktitle={Computer Aided Verification},
+    year={2016},
+    publisher={Springer International Publishing},
+    address={Cham},
+    pages={42-58},
+    abstract={Despite 20+ years of research on processor verification, it remains hard to use formal verification techniques in commercial processor development. There are two significant factors: scaling issues and return on investment. The scaling issues include the size of modern processor specifications, the size/complexity of processor designs, the size of design/verification teams and the (non)availability of enough formal verification experts. The return on investment issues include the need to start catching bugs early in development, the need to continue catching bugs throughout development, and the need to be able to reuse verification IP, tools and techniques across a wide range of design styles.},
+    isbn={978-3-319-41540-6}
+}
+
+@InProceedings{Burch94,
+    author={Burch, Jerry R. and Dill, David L.},
+    editor={Dill, David L.},
+    title={Automatic verification of pipelined microprocessor control},
+    booktitle={Computer Aided Verification},
+    year={1994},
+    publisher={Springer Berlin Heidelberg},
+    address={Berlin, Heidelberg},
+    pages={68-80},
+    abstract={We describe a technique for verifying the control logic of pipelined microprocessors. It handles more complicated designs, and requires less human intervention, than existing methods. The technique automatically compares a pipelined implementation to an architectural description. The CPU time needed for verification is independent of the data path width, the register file size, and the number of ALU operations. Debugging information is automatically produced for incorrect processor designs. Much of the power of the method results from an efficient validity checker for a logic of uninterpreted functions with equality. Empirical results include the verification of a pipelined implementation of a subset of the DLX architecture.},
+    isbn={978-3-540-48469-1}
+}
+
+@INPROCEEDINGS{Beatty94,
+    author={D. L. {Beatty} and R. E. {Bryant}},
+    booktitle={31st Design Automation Conference},
+    title={Formally Verifying a Microprocessor Using a Simulation Methodology},
+    year={1994},
+    volume={},
+    number={},
+    pages={596-602},
+    keywords={Microprocessors;Switches;Circuit simulation;Registers;Switching circuits;Formal verification;Pipeline processing;Circuit testing;Laboratories;Timing},
+    doi={10.1145/196244.196575},
+    ISSN={},
+    month={June},
+}
+
+@book{Patterson13,
+ author = {Patterson, David A. and Hennessy, John L.},
+ title = {Computer Organization and Design: The Hardware/Software Interface},
+ year = {2013},
+ isbn = {9780124077263},
+ edition = {5},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+}
+
+@inproceedings{Klein09,
+    author = {Klein, Gerwin and Elphinstone, Kevin and Heiser, Gernot and Andronick, June and Cock, David and Derrin, Philip and Elkaduwe, Dhammika and Engelhardt, Kai and Kolanski, Rafal and Norrish, Michael and Sewell, Thomas and Tuch, Harvey and Winwood, Simon},
+    title = {seL4: Formal Verification of an OS Kernel},
+    booktitle = {Proceedings of the ACM SIGOPS 22Nd Symposium on Operating Systems Principles},
+    series = {SOSP '09},
+    year = {2009},
+    isbn = {978-1-60558-752-3},
+    location = {Big Sky, Montana, USA},
+    pages = {207-220},
+    numpages = {14},
+    url = {http://doi.acm.org/10.1145/1629575.1629596},
+    doi = {10.1145/1629575.1629596},
+    acmid = {1629596},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@InProceedings{Vaynberg12,
+    author={Vaynberg, Alexander and Shao, Zhong},
+    editor={Hawblitzel, Chris and Miller, Dale},
+    title={Compositional Verification of a Baby Virtual Memory Manager},
+    booktitle={Certified Programs and Proofs},
+    year={2012},
+    publisher={Springer Berlin Heidelberg},
+    address={Berlin, Heidelberg},
+    pages={143-159},
+    isbn={978-3-642-35308-6}
+}
+
+@InProceedings{Dalinger05,
+    author={Dalinger, Iakov and Hillebrand, Mark and Paul, Wolfgang},
+    editor={Borrione, Dominique and Paul, Wolfgang},
+    title={On the Verification of Memory Management Mechanisms},
+    booktitle={Correct Hardware Design and Verification Methods},
+    year={2005},
+    publisher={Springer Berlin Heidelberg},
+    address={Berlin, Heidelberg},
+    pages={301--316},
+    isbn={978-3-540-32030-2}
+}
