--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -16,7 +16,7 @@
 \usepackage{rotating}
 \usepackage{pifont}
 \usepackage[backend=biber,style=alphabetic]{biblatex}
-\usetikzlibrary{positioning,calc,graphs,shapes,arrows}
+\usetikzlibrary{positioning,calc,graphs,shapes,arrows,decorations.markings,backgrounds,chains}
 
 \setlength{\grammarindent}{8em}
 
@@ -125,6 +125,7 @@
 \newacronym{2bmc}{2BMC}{Bounded Model Checking-Based Model Checking}
 \newacronym{cegar}{CEGAR}{Counterexample Guided Abstaction Refinement}
 \newacronym{ltl}{LTL}{linear temporal logic}
+\newacronym{api}{API}{Application Programming Interface}
 
 \newacronym{jal}{\rv{Jal}}{jump and link}
 \newacronym{jalr}{\rv{Jalr}}{jump and link register}
